# basic-activitypub-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  shell.nix
src/: actor.rs  lib.rs  webfinger.rs
